update to not depricated function